meja/tests/module_hiding_module.stderr
File "tests/module_hiding_module.meja", line 16, characters 11-14:
Error: Unbound module A.X.
