meja/tests/module_hiding_module.meja
module A = {
  module X = {};
};

module B = {
  module A = {
    module Y = {};
  };
};

open B;

module Y = A.Y;

/* Expect an error, A should be out of scope. */
module X = A.X;
